[tool.poetry]
name = "pythonhelpbot"
version = "0.1.0"
description = ""
authors = ["Marco Rougeth <olmarc@amazon.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pyTelegramBotAPI = "^3.6"
loguru = "^0.2.5"

[tool.poetry.dev-dependencies]
ipython = "^7.5"
ipdb = "^0.12.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
